<resources>
    <string name="app_name">Infobip RTC Application Calls Showcase</string>
    <string name="customer">Customer</string>
    <string name="agent">Agent</string>
    <string name="logged_in_as">Logged in as %1$s</string>
    <string name="connection_error">Connection error: %1$s %2$s</string>
    <string name="video_call_with_agent">Video call with agent</string>
    <string name="phone_call">Phone call</string>
    <string name="incoming_application_call">Incoming application call</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="calling">Calling…</string>
    <string name="ringing">Ringing…</string>
    <string name="in_call">In a call</string>
    <string name="in_conference">In a conference %1$s</string>
    <string name="in_dialog">In a dialog with %1$s</string>
    <string name="hangup_message">Hangup: %1$s</string>
    <string name="error_message">Error: %1$s</string>
    <string name="participants_title">Participants: %1$d</string>
    <string name="remote_videos">Remote videos</string>
    <string name="local_videos">Local videos</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="audio_quality">Audio quality</string>
    <string name="audio_device">Audio device</string>
    <string name="toggle_camera">Toggle camera</string>
    <string name="toggle_screen_share">Toggle screenshare</string>
    <string name="hangup">Hangup</string>
    <string name="flip_camera">Flip</string>
</resources>