<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/customer_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/agent_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agent" />
    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/login_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logged_in_as"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/customer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/video_call_with_agent_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_call_with_agent" />

        <Button
            android:id="@+id/phone_call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_call" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/incoming_call_agent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incoming_application_call" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/accept_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept" />

            <Button
                android:id="@+id/decline_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decline" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/in_call_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/call_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/participants_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/participants_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/participants_title" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <LinearLayout
                    android:id="@+id/participants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/remote_videos_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remote_videos" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <LinearLayout
                    android:id="@+id/remote_videos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </HorizontalScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/local_videos_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/local_videos" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <LinearLayout
                    android:id="@+id/local_videos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </HorizontalScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/audio_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <Button
                android:id="@+id/toggle_audio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mute" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/video_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <Button
                android:id="@+id/toggle_camera_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toggle_camera" />

            <Button
                android:id="@+id/toggle_screen_share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toggle_screen_share" />

            <Button
                android:id="@+id/flip_camera_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flip_camera"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/hangup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hangup"
        android:visibility="gone" />
</LinearLayout>